Fixed header position
Updated the position of the header to not appear below the cards when scrolling.

--- a/mtg-front-end/src/Components/App.css
+++ b/mtg-front-end/src/Components/App.css
@@ -1,7 +1,7 @@
   ul{
     list-style-type: none;
     background-color: green;
-    position: fixed;
+    position:sticky;
     top: 0;
     left: 0;
     right: 0;
@@ -23,4 +23,5 @@
 
   .cards{
     background-color: white;
+
   }
